Fixed overflowing image issue

--- a/style.css
+++ b/style.css
@@ -20,13 +20,14 @@ body{
 
 .slide_wrapper{
     width: 100%;
+    height: 750px;
     display: flex;
     flex-direction: row;
 }
 
 .carousel_slide{
     width: 100%;
-    height: 750px;
+    height: 100%;
     object-fit: cover;
 }
 
